--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Server for Group Chat Assignment",
+  "description": "Server for Group Chat",
   "main": "server.js",
   "scripts": {
     "server": "nodemon server",
